Updated the alignment and bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -463,7 +463,7 @@ input, select, textarea {
 
 footer {
     background-color: rgb(255, 235, 213);
-    margin-top: 8rem;
+    margin-top: 20rem;
     padding-top: 2rem;
 }
 .footer-categories {
